stateDiagram-v2
    [*] --> LANGUAGE
    LANGUAGE --> MAIN_MENU
    
    MAIN_MENU --> CLEANING_SERVICE_TYPE: Option 1
    MAIN_MENU --> WORK_TYPE: Option 2
    
    state "Cleaning Flow" as CleanFlow {
        CLEANING_SERVICE_TYPE --> CLEANING_FLAT_STATUS
        CLEANING_SERVICE_TYPE --> CLEANING_BATHROOM_TYPE
        CLEANING_SERVICE_TYPE --> CLEANING_MINI_SERVICE
        CLEANING_SERVICE_TYPE --> CLEANING_VILLA_STATUS
        
        CLEANING_FLAT_STATUS --> CLEANING_FLAT_BHK
        CLEANING_VILLA_STATUS --> CLEANING_VILLA_SQFT
        CLEANING_BATHROOM_TYPE --> CLEANING_BATHROOM_SUB_COUNT
        CLEANING_BATHROOM_TYPE --> CLEANING_BATHROOM_ONETIME_COUNT
        
        CLEANING_FLAT_BHK --> CLEANING_CONTINUE
        CLEANING_VILLA_SQFT --> CLEANING_CONTINUE
        CLEANING_BATHROOM_SUB_COUNT --> CLEANING_BATHROOM_ACTION
        CLEANING_BATHROOM_ONETIME_COUNT --> CLEANING_BATHROOM_ACTION
        CLEANING_MINI_SERVICE --> CLEANING_LOCATION
        
        CLEANING_CONTINUE --> CLEANING_LOCATION
        CLEANING_BATHROOM_ACTION --> CLEANING_LOCATION
        CLEANING_LOCATION --> CLEANING_DATE
        CLEANING_DATE --> CLEANING_CONFIRM
    }
    
    state "Maid Flow" as MaidFlow {
        WORK_TYPE --> TIMING
        TIMING --> BUDGET
        BUDGET --> MAID_CITY
        MAID_CITY --> MAID_AREA
        MAID_AREA --> MAID_CHOICE
        MAID_CHOICE --> COLLECT_FLAT
        COLLECT_FLAT --> COLLECT_DATE
        COLLECT_DATE --> MAID_PLAN
        MAID_PLAN --> CONFIRM
    }
    
    CLEANING_CONFIRM --> [*]: Confirmed
    CONFIRM --> [*]: Confirmed
    
    CLEANING_CONFIRM --> [*]: Cancelled
    CONFIRM --> [*]: Cancelled
